# Iroha-CLI

./: .gitignore  .gitkeep  LICENSE  README.md  genesis.block.template  genesis_block.json  genesis_block.py  iroha jira.txt  iroha_cli.py  pyproject.toml
cli/: __init__.py  commands.py  main.py  queries.py
cli/iroha_tools/: api.py  client.py  commons.py  iroha_helpers.py  utils.py
iroha/: docker-compose-grpc.yaml  docker-compose.yaml
iroha/iroha/: config.docker  genesis copy.block  genesis.block
iroha_cli/: __init__.py  _commands.py  _genesis_block.py  main.py  menu_text.py
iroha_cli/iroha_tools/: client.py  commons.py
