[tool.poetry]
name = "iroha-cli"
version = "0.1.0"
description = "Hyperledger Iroha CLi Tool"
authors = ["Farren Jackson"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
iroha = "^0.0.5"
click = "^7.1.2"
emoji = "^0.5.4"
pyinquirer = "^1.0.3"
rich = "^5.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
